--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-asgiref==3.5.2
-distlib==0.3.6
-Django==4.1.3
-django-admin-interface==0.24.2
-django-browser-reload==1.6.0
-django-colorfield==0.8.0
-django-extensions==3.2.1
+asgiref==3.9.1
+Brotli==1.1.0
+cffi==1.17.1
+cssselect2==0.8.0
+Django==5.2.4
 django-widget-tweaks==1.5.0
-filelock==3.8.0
-mysqlclient==2.1.1
-Pillow==9.4.0
-platformdirs==2.5.3
-sqlparse==0.4.3
-tzdata==2022.6
-virtualenv==20.16.6
+fonttools==4.59.0
+pillow==11.3.0
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+six==1.17.0
+sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.14.1
+tzdata==2025.2
+weasyprint==66.0
+webencodings==0.5.1
+zopfli==0.2.3.post1
