--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,14 @@
-asgiref==3.9.1
-Brotli==1.1.0
-cffi==1.17.1
-cssselect2==0.8.0
-Django==5.2.4
-django-widget-tweaks==1.5.0
-fonttools==4.59.0
-pillow==11.3.0
-pycparser==2.22
-pydyf==0.11.0
-pyphen==0.17.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-six==1.17.0
-sqlparse==0.5.3
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-typing_extensions==4.14.1
-tzdata==2025.2
-weasyprint==66.0
-webencodings==0.5.1
-zopfli==0.2.3.post1
-psycopg2-binary==2.9.10
+# Django Framework
+Django>=5.2,<5.3
+
+# Connecteur de base de données
+psycopg2-binary
+
+# Variables d'environnement
+python-dotenv
+
+# Add-ons et Utilitaires Django
+django-widget-tweaks
+Pillow
+weasyprint
+python-dateutil
