--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
-# Django Framework
-Django>=5.2,<5.3
-
-# Serveur d'application WSGI pour la production
-gunicorn
-
-# Connecteur de base de données
-psycopg2-binary
-
-# Variables d'environnement
-python-dotenv
-
-# Utilitaires pour la configuration en production
-dj-database-url
-
-# Add-ons et Utilitaires Django
-django-widget-tweaks
-Pillow
-weasyprint
-python-dateutil
-whitenoise
+asgiref==3.9.1
+Brotli==1.1.0
+cffi==1.17.1
+cssselect2==0.8.0
+dj-database-url==3.0.1
+Django==5.2.4
+django-widget-tweaks==1.5.0
+fonttools==4.59.0
+gunicorn==23.0.0
+packaging==25.0
+pillow==11.3.0
+psycopg2-binary==2.9.10
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+six==1.17.0
+sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.14.1
+tzdata==2025.2
+waitress==3.0.2
+weasyprint==66.0
+webencodings==0.5.1
+whitenoise==6.11.0
+zopfli==0.2.3.post1
