--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,5 +10,6 @@ aptPkgs = [
    "pkg-config",
    "libcairo2-dev",
    "libpango1.0-dev",
-   "libgdk-pixbuf-2.0-dev"
+   "libgdk-pixbuf-2.0-dev",
+   "libgobject-2.0-0"
 ]
