--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,5 +11,6 @@ aptPkgs = [
    "libcairo2-dev",
    "libpango1.0-dev",
    "libgdk-pixbuf-2.0-dev",
-   "libgobject-2.0-0"
+   "shared-mime-info"
+   
 ]
