--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ fonttools==4.59.0
 gunicorn==23.0.0
 packaging==25.0
 pillow==11.3.0
-psycopg==3.2.1
+psycopg[binary]==3.2.1
 pycparser==2.22
 pydyf==0.11.0
 pyphen==0.17.2
@@ -26,4 +26,3 @@ weasyprint==66.0
 webencodings==0.5.1
 whitenoise==6.11.0
 zopfli==0.2.3.post1
-
